remove legacy compiler. deliberately breaks build !